--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^5.9.4",
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-camera": "^0.6.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-navigation": "^3.8.1",
     "yarn": "^1.15.2"
